# sentinel

./: .commitmsg.txt  CONTROLS.md  Cargo.toml  README.md  RULES.md  action.yml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compose-parser/: Cargo.toml
crates/compose-parser/src/: lib.rs
crates/dockerfile-parser/src/: lib.rs
crates/engine/src/: lib.rs
crates/fact-model/: Cargo.toml
crates/fact-model/src/: lib.rs  limits.rs
crates/gha-parser/: Cargo.toml
crates/gha-parser/src/: lib.rs
crates/harness/: Cargo.toml
crates/harness/corpus/: anchors-merge.yml  attack-path.yml  benign-mount.yml  cap-add-all.yml  combo-insecure.yml  database-auth-disabled.yml  df-tls-disabled.Dockerfile  df-world-writable.Dockerfile  gha-broad-permissions.yml  gha-clean.yml  gha-combo.yml  gha-pwn-request.yml  gha-script-injection.yml  gha-secrets-inherit.yml  gha-self-hosted.yml  gha-unpinned-action.yml  host-ipc.yml  host-pid.yml  host-takeover-path.yml  host-userns.yml  k8s-allow-priv-esc.yml  k8s-attack-path.yml  k8s-cap-all.yml  k8s-clean.yml  k8s-cluster-admin.yml  k8s-dangerous-cap.yml  k8s-host-namespaces.yml  k8s-hostpath-socket.yml  k8s-image-unpinned.yml  k8s-privileged.yml  k8s-rbac-secret.yml  k8s-rbac-wildcard.yml  k8s-runs-as-root.yml  k8s-seccomp-unconfined.yml  k8s-secret-inline.yml  multihop-path.yml  secrets-aws.env  secrets-clean.env  secrets-combo.env  secrets-generic.env  (+14 more)
crates/harness/src/: main.rs
crates/k8s-parser/: Cargo.toml
crates/k8s-parser/src/: lib.rs
crates/pack-dockerfile-core/src/: lib.rs
crates/pack-gha-core/: Cargo.toml
crates/pack-gha-core/src/: lib.rs
crates/pack-k8s-core/: Cargo.toml
crates/pack-k8s-core/src/: lib.rs
crates/pack-secrets-core/: Cargo.toml
crates/pack-secrets-core/src/: lib.rs
crates/pack-terraform-core/: Cargo.toml
crates/secrets-parser/: Cargo.toml
crates/terraform-parser/: Cargo.toml
crates/yaml-loc/: Cargo.toml
crates/yaml-loc/src/: lib.rs
(+5 files in other folders)
